<resources>
    <string name="app_name">GeoTag</string>
    <string name="title_activity_maps">GeoTag</string>
    <string name="button_text">Place Marker</string>
    <string name="action_settings">Settings</string>
    <string name="marker_title">Marker</string>
    <string name="marker_created">Marker created</string>
    <string name="marker_deleted">Marker deleted</string>
    <string name="map_not_loaded">Map Not Loaded</string>
    <string name="undo">UNDO</string>
    <string name="retry">Retry</string>
    <string name="pos_not_loaded">Position Not Loaded</string>
    <string name="gps_alert_dialog_title">GPS disabled</string>
    <string name="gps_alert_dialog_text">GPS needed, would you like to enable it? </string>
    <string name="authenticating_dialog">Authenticating...</string>
    <string name="posting_sample_dialog">Sending data...</string>
    <string name="downloading_data_dialog">Downloading data...</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no_date_estimated">No, la data è stimata</string>
    <string name="cancel">Cancel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="pref_connectionType">Connection Type</string>
    <string name="pref_connectionTypes_default">HTTP</string>
    <string name="pref_serverHostAddress">Server Host Address</string>
    <string name="pref_serverHostPort">Server Host Port</string>
    <string name="pref_username">Username</string>
    <string name="pref_password">Password</string>
    <string name="pref_serverHostAddress_default">localhost</string>
    <string name="pref_serverHostPort_default">8080</string>
    <string name="pref_username_default">username</string>
    <string name="pref_password_default">password</string>
    <string name="pref_zoomLevel">Zoom Level </string>
    <string name="pref_zoomLevel_default">16</string>
    <string name="tomap_sample_inserted">Campione inserito</string>
    <!-- Tomap strings-->
    <string name="latitude">Latitudine</string>
    <string name="longitude">Longitudine</string>
    <string name="measure_date">Data Rilievo</string>
    <string name="usage_culture">Uso/Coltura</string>
    <string name="tomato_type">Tipo Pomodoro</string>
    <string name="pacciamato_text_title">Il pomodoro è pacciamato?</string>
    <string name="pacciamato">Pacciamato</string>
    <string name="culture_notes">Note Coltura</string>
    <string name="transplant_date">Data Trapianto</string>
    <string name="transplant_date_estimated_text">Data Trapianto Certa/Stimata</string>
    <string name="transplant_date_estimated">Data Certa</string>
    <string name="growing_state">Stadio Accrescimento</string>
    <string name="pick_date">Data Raccolta</string>
    <string name="yeld">Resa</string>
    <string name="adversity">Avversità</string>
    <string name="adversity_level">Grado Avversità</string>
    <string name="qualitative_element">Elemento Qualitativo</string>
    <string name="qualitative_level">Grado Elemento Qualitativo</string>
    <string name="screening_notes">Note Rilievo</string>

</resources>
